flux/apps/toolbox/build-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-dashboard
  namespace: toolbox
spec:
  selector:
    app: build-dashboard
  ports:
    - port: 8080
      targetPort: 8080
